# smart-lottery

./: README.md
near-smart-lottery/: Cargo.toml  build.sh  deploy.sh
near-smart-lottery/src/: lib.rs
solana-smart-lottery/: Anchor.toml  Cargo.toml
solana-smart-lottery/programs/solana-smart-lottery/: Cargo.toml
solana-smart-lottery/programs/solana-smart-lottery/src/: lib.rs
solana-smart-lottery/src/: error.rs  instruction.rs  lib.rs  processor.rs
solana-smart-lottery/tests/: solana-smart-lottery.ts
substrate_smart_lottery/: Cargo.toml  lib.rs
